# sipin-meemoo-sip-2-validator

./: .copier-answers.yml  .env.example  .gitmodules  Dockerfile  README.md  config.yml  flake.nix  main.py  pyproject.toml
.openshift/: Jenkinsfile  Makefile  sipin-mh-sip-creator-multibranch-pipeline.xml
app/: app.py
app/services/: pulsar.py
tests/: conftest.py  test_app.py  test_sanity.py  test_service.py
tests/resources/film_sip/: METS.xml
tests/resources/film_sip/metadata/descriptive/: dc+schema.xml
tests/resources/film_sip/metadata/preservation/: premis.xml
tests/resources/film_sip/representations/uuid-46b16a3e-3dbe-472d-9e9e-47c99457389d/: METS.xml
tests/resources/film_sip/representations/uuid-46b16a3e-3dbe-472d-9e9e-47c99457389d/metadata/preservation/: premis.xml
tests/resources/film_sip/representations/uuid-5d7d4281-6a06-4b0e-ab88-cd430cb751ce/: METS.xml
tests/resources/film_sip/representations/uuid-5d7d4281-6a06-4b0e-ab88-cd430cb751ce/data/: master_dummy.mkv
tests/resources/film_sip/representations/uuid-5d7d4281-6a06-4b0e-ab88-cd430cb751ce/metadata/preservation/: premis.xml
tests/resources/film_sip/representations/uuid-e2765c34-68dd-4f36-a230-5483c4bed076/: METS.xml
tests/resources/film_sip/representations/uuid-e2765c34-68dd-4f36-a230-5483c4bed076/metadata/preservation/: premis.xml
tests/resources/film_sip/representations/uuid-e3000091-b0c2-459b-9863-e5d2da8270c8/: METS.xml
tests/resources/film_sip/representations/uuid-e3000091-b0c2-459b-9863-e5d2da8270c8/data/: mezzanine_dummy.mov
tests/service/: conftest.py  test_service.py
(+1 files in other folders)
