[project]
name = "sipin-meemoo-sip-2-validator"
version = "0.0.1"
description = "A service that validates incoming meemoo SIPs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "viaa-chassis==0.2.1",
    "pulsar-client==3.8.0",
    "meemoo-cloudevents==0.1.0rc3",
    "meemoo-sip-validator==0.2.7"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "ruff==0.12.7",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "testcontainers==4.12.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = ["tests"]
